# loadfactors2024am

./: README.md  pyproject.toml
src/loadfactors_flit/: __init__.py  loadfactors.py
src/loadfactors_flit/.ipynb_checkpoints/: __init__-checkpoint.py  loadfactors-checkpoint.py
src/loadfactors_setuptools/: __init__.py  loadfactors.py
tests/: test_loadfactors.py
tests/.ipynb_checkpoints/: test_loadfactors-checkpoint.py
